fix: 폰트 최적화 및 외부 스크립트  로딩 최적화

--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css" rel="stylesheet" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <title>초보 식집사를 위한 반려식물 가이드, Blooming</title>
     <link href="/apple-icon-57x57.png" rel="apple-touch-icon" sizes="57x57">
@@ -34,7 +33,6 @@
     <link href="/splashscreens/ipadpro2_splash.png" media="(device-width: 1024px) and (device-height: 1366px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image" />
   </head>
   <body>
-    <script src="https://appleid.cdn-apple.com/appleauth/static/jsapi/appleid/1/en_US/appleid.auth.js" type="text/javascript"></script>
     <script src="/src/main.tsx" type="module"></script>
     <script>
       if (typeof navigator.serviceWorker !== 'undefined') {
@@ -42,5 +40,6 @@
       }
     </script>
     <div id="root"></div>
+    <script async src="https://appleid.cdn-apple.com/appleauth/static/jsapi/appleid/1/en_US/appleid.auth.js" type="text/javascript"></script>
   </body>
 </html>
