fix: preconnect 옵션 추가

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <title>초보 식집사를 위한 반려식물 가이드, Blooming</title>
+    <link href="https://stophwan.com" rel="preconnect" />
     <link href="/apple-icon-57x57.png" rel="apple-touch-icon" sizes="57x57">
     <link href="/apple-icon-60x60.png" rel="apple-touch-icon" sizes="60x60">
     <link href="/apple-icon-72x72.png" rel="apple-touch-icon" sizes="72x72">
