fix: 레지스터 경로 수정

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <script src="/src/main.tsx" type="module"></script>
     <script>
       if (typeof navigator.serviceWorker !== 'undefined') {
-        navigator.serviceWorker.register('sw.js')
+        navigator.serviceWorker.register('./sw.js')
       }
     </script>
     <div id="root"></div>
