--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <title>초보 식집사를 위한 반려식물 가이드, Blooming</title>
+    <meta content="Blooming은 초보 식집사를 위한 반려식물 가이드입니다. 반려식물을 키우는 방법, 식물에 대한 정보, 식물을 키우는 방법 등을 알려드립니다." name="description" />
     <link href="https://stophwan.com" rel="preconnect" />
     <link href="/apple-icon-57x57.png" rel="apple-touch-icon" sizes="57x57">
     <link href="/apple-icon-60x60.png" rel="apple-touch-icon" sizes="60x60">
